@@ -23,6 +23,7 @@ Version 1.5.7+svn:
    * Fix the calculate feature in the test scenario.
    * Fix an endian issue which rendered text wrong on big endian machines.
    * A backspace in a textbox with selection, now clears the selection.
+   * Scrollwheel mouses can scroll the new listboxes.
 
 Version 1.5.7:
  * Campaigns:
